updated title in index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jae Lieder's Portfolio</title>
+  <title>Jae Gullings Portfolio</title>
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel ="stylesheet" href ="css/normalize.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
