updated index title

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-<<<<<<< HEAD
-  <title>Jae's Work</title>
-=======
-  <title>Jae Gullings Portfolio</title>
->>>>>>> parent of 5f9d0b4 (Revert "updated title in index")
+  <title>Jae Lieder's Portfolio</title>
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel ="stylesheet" href ="css/normalize.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
