add link to index page
direct folks to GitHub from " text of check out some of my code"

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img src="./img/jae_lieder_headshot2.png" alt="A Photograph of Jae Lieder, a white person with glasses. They are wearing a grey hat and vertical striped button up. They are standing in front of snowy trees smiling." class="profile__portrait">
     <h1>Hello World!</h1>
     <p>My name is Jae Lieder (they/them). I am a <span>web</span> developer from Minneapolis.</p>
-    <a href="#">Check out some of my code</a>
+    <a href="https://github.com/jaelieder">Check out some of my code</a>
     <br>
     <!-- <a href="#">Default Link</a>
     <button type="button">Default Button</button>
