link logo image in about

--- a/about.html
+++ b/about.html
@@ -15,8 +15,9 @@
 
 <body>
   <header class="page-header">
-    <img src="./img/jae_lieder_logo.png" class="page-header__item"
-      alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+   <a href="https://jaelieder.github.io/portfolio-website/index.html" target="_blank">
+      <img src="./img/jae_lieder_logo.png" class="page-header__item" alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+   </a>
       <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -1655,7 +1656,7 @@
         </g>
       </svg>
 <br>
-      <a href="https://www.freepik.com/free-vector/breakfast-background-design_1041753.htm#query=egg%20and%20fork&position=5&from_view=search&track=ais">Image by photoroyalty</a> on Freepik
+      <a href="https://www.freepik.com/free-vector/breakfast-background-design_1041753.htm#query=egg%20and%20fork&position=5&from_view=search&track=ais" target="blank"> Image by photoroyalty</a> on Freepik
 <br>
 <br>
     <table class="table">
@@ -1683,16 +1684,16 @@
           <td>Beginner</td>
         </tr>
       </tbody>
-    </table>
+   </table>
     <br>
-    <a href="#" class="button" download>Download my CV</a>
+    <a href="#" class="button" target="blank" download>Download my CV</a>
 
   </main>
 
   <footer class="page-footer">
    <div class="social-media">
     <p>Find me on</p>
-    <a href="https://www.linkedin.com/in/jaelieder/" target="_blank"><img src="img/linkedin_icon.svg" alt="linkedin"></a>
+    <a href="https://www.linkedin.com/in/jaelieder/" target="blank"><img src="img/linkedin_icon.svg" alt="linkedin"></a>
     <a href="https://github.com/jaelieder" target="blank"><img src="img/github_icon.svg" alt="github"></a>
     <!-- <img src="img/twitter_icon.svg" alt="twitter"> -->
   </div>
