--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,9 @@
 
 <body>
   <header class="page-header">
-    <img src="./img/jae_lieder_logo.png" class="page-header__item"
-      alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+    <a href="https://jaelieder.github.io/portfolio-website/index.html" target="_blank">
+      <img src="./img/jae_lieder_logo.png" class="page-header__item" alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+    </a>
       <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
