link icon in index

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <body>
   <header class="page-header">
-    <img src="./img/jae_lieder_logo.png" class="page-header__item"
-      alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+    <a href="https://jaelieder.github.io/portfolio-website/index.html" target="_blank">
+      <img src="./img/jae_lieder_logo.png" class="page-header__item" alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+    </a>
       <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -39,7 +40,7 @@
     <img src="./img/jae_lieder_headshot2.png" alt="A Photograph of Jae Lieder, a white person with glasses. They are wearing a grey hat and vertical striped button up. They are standing in front of snowy trees smiling." class="profile__portrait">
     <h1>Hello World!</h1>
     <p>My name is Jae Lieder (they/them). I am a <span>web</span> developer from Minneapolis.</p>
-    <a href="https://github.com/jaelieder">Check out some of my code</a>
+    <a href="https://github.com/jaelieder" target="blank"> Check out some of my code</a>
     <br>
     <!-- <a href="#">Default Link</a>
     <button type="button">Default Button</button>
