link logo in work

--- a/work.html
+++ b/work.html
@@ -15,8 +15,9 @@
 
 <body>
   <header class="page-header">
-    <img src="./img/jae_lieder_logo.png" class="page-header__item"
-      alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+    <a href="https://jaelieder.github.io/portfolio-website/index.html" target="_blank">
+      <img src="./img/jae_lieder_logo.png" class="page-header__item" alt="Personal logo of Jae Lieder, a text logo in white uppercase letters that consists of my name with a turquoise background.">
+    </a>
       <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -44,42 +45,42 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="#" target="blank"> See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>Mobile web app 2</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="#" target="blank"> See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>Mobile web app 3</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="#" target="blank"> See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>Mobile web app 4</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="#" target="blank"> See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>Mobile web app 5</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="#" target="blank"> See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>Mobile web app 6</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="#" target="blank"> See project on GitHub</a>
       </div>
     </div>
   </main>
