remove personal info on contact

--- a/contact.html
+++ b/contact.html
@@ -40,14 +40,10 @@
     <h1>Contact</h1>
 
     <div>
-      Address:<br>
-      Jae Lieder<br>
-      3300 30th Ave S<br>
+      Location:<br>
       Minneapolis, MN<br>
       United States<br>
       <br>
-      Phone: <a href="tel:1+763-300-7783" aria-label="7 6 3. 3 0 0. 7 7 8 3.">1+ (763) 300-7783</a><br>
-      Skype: <a href="skype:hello.careerfoundry"> hello.careerfoundry</a><br>
       <a href="mailto:jae.lieder@gmail.com">jae.lieder@gmail.com</a>
     </div>
   <p><a href="mailto:jae.lieder@gmail.com">Contact me</a></p>
